add metadata dn refractor css

--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Salary Calculator</title>
+        <meta name="description" content="Collects salaries and calculates total monthly">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- styles.css contains custom stylesheet for this page -->
